Infra.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'AWS Cloudformation Template to create the Infrastructure'
Resources:
  VPC:
   Type: "AWS::EC2::VPC"
   Properties:
    CidrBlock: 10.0.0.0/16
    Tags:
      - Key: Name
        Value: 'Sample-VPC'
  PublicSubnetAZ1:
   Type: "AWS::EC2::Subnet"
   Properties:
    AvailabilityZone: {
      Fn::Select: [
          "0",
        {
          Fn::GetAZs: ""
        }
      ]
    }
    CidrBlock: 10.0.1.0/24
    VpcId: !Ref 'VPC'
    Tags:
      - Key: Name
        Value: 'PublicSubnetAZ1'
  ECSInternetGateway:
   Type: AWS::EC2::InternetGateway
   Properties:
    Tags:
      - Key: Name
        Value: 'Internet_Gateway'
  ECSIGVPCAssociation:
   Type: AWS::EC2::VPCGatewayAttachment
   Properties:
    InternetGatewayId: !Ref 'ECSInternetGateway'
    VpcId: !Ref 'VPC'
  ECSRouteTable:
   Type: AWS::EC2::RouteTable
   Properties:
    VpcId: !Ref 'VPC'
  ECSRoute:
   Type: AWS::EC2::Route
   Properties:
    RouteTableId: !Ref 'ECSRouteTable'
    DestinationCidrBlock: 0.0.0.0/0
    GatewayId: !Ref 'ECSInternetGateway'
  RoutePublicSubnetAZ1Association:
   Type: AWS::EC2::SubnetRouteTableAssociation
   Properties:
    RouteTableId: !Ref 'ECSRouteTable'
    SubnetId: !Ref 'PublicSubnetAZ1'
  PublicSecurityGroup:
   Type: AWS::EC2::SecurityGroup
   Properties:
    GroupDescription: Public Security Group
    VpcId: !Ref 'VPC'
    Tags:
      - Key: Name
        Value: 'PublicSecurityGroup'
  PublicSecurityGroupHTTPinbound:
   Type: AWS::EC2::SecurityGroupIngress
   Properties:
    GroupId: !Ref 'PublicSecurityGroup'
    IpProtocol: tcp
    FromPort: '80'
    ToPort: '80'
    CidrIp: 0.0.0.0/0
  PublicSecurityGroupSSHinbound:
   Type: AWS::EC2::SecurityGroupIngress
   Properties:
    GroupId: !Ref 'PublicSecurityGroup'
    IpProtocol: tcp
    FromPort: '22'
    ToPort: '22'
    CidrIp: 0.0.0.0/0

Outputs:
  PublicSecurityGroup:
    Description: Outputs the SG-ID
    Value:
      Ref: PublicSecurityGroup
    Export:
      Name: PublicSecurityGroup

  PublicSubnetAZ1:
    Description: Outputs the Subnet-ID
    Value:
      Ref: PublicSubnetAZ1
    Export:
      Name: PublicSubnetAZ1
